--- a/lib/views/request/_after_actions.html.erb
+++ b/lib/views/request/_after_actions.html.erb
@@ -7,7 +7,9 @@
     <ul>
       <% if @info_request.comments_allowed? %>
         <li>
-          <%= raw(_('<a href="{{url}}">Add an annotation</a> (to help the requester or others)', :url $
+          <%= raw(_('<a href="{{url}}">Add an annotation</a> (to help the ' \
+                      'requester or others)',
+                    :url => new_comment_url(:url_title => @info_request.url_title).html_safe)) %>
         </li>
       <% end %>
 
@@ -20,9 +22,9 @@
       <li>
         <%= link_to _("Download a zip file of all correspondence"), download_entire_request_path(:url_title => @info_request.url_title) %>
       </li>
-    
+      
       <li>
-        <p><%= link_to _('Event history details'), request_details_path(@info_request) %></p>
+        <%= link_to _("Request an internal review"), show_response_no_followup_path(:id => @info_request.id, :incoming_message_id => nil) + "?internal_review=1#followup" %>
       </li>
     </ul>
   </div>
@@ -34,9 +36,9 @@
       <ul>
         <li>
           <% if @last_response.nil? %>
-            <%= link_to _("Send a followup"), show_response_no_followup_path(:id => @info_request.id, :incoming_message_id => nil) + "#followup" %>
+            <%= link_to _("Send a followup"), new_request_followup_path(:request_id => @info_request.id) + "#followup" %>
           <% else %>
-            <%= link_to _("Write a reply"), show_response_path(:id => @info_request.id, :incoming_message_id => @last_response.id) + "#followup" %>
+            <%= link_to _("Write a reply"), new_request_incoming_followup_path(:request_id => @info_request.id, :incoming_message_id => @last_response.id) + "#followup" %>
           <% end %>
         </li>
 
@@ -47,7 +49,7 @@
         <% end %>
 
         <li>
-          <%= link_to _("Request an internal review"), show_response_no_followup_path(:id => @info_request.id, :incoming_message_id => nil) + "?internal_review=1#followup" %>
+          <%= link_to _("Request an internal review"), new_request_followup_path(:request_id => @info_request.id) + "?internal_review=1#followup" %>
         </li>
       </ul>
     </div>
