--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -9,6 +9,8 @@ $color_violet: #a94ca6;
 $color_purple: #5c377f;
 $color_white: #ffffff;
 
+$mysociety-banner: $color_black;
+
 $color_neutral_light: $color_sand;
 $color_neutral_dark: $color_black;
 $color_primary: $color_violet;
