fix size and url

--- a/lib/views/general/_responsive_header.html.erb
+++ b/lib/views/general/_responsive_header.html.erb
@@ -2,7 +2,7 @@
 <div class="ms-header">
   <div class="ms-header__container">
     <div class="ms-header__logo">
-      <a href="http://codeforcroatia.org">Code for Croatia</a>
+      <a href="/help/about#us">Projekt provode Code for Croatia & IME</a>
     </div>
   </div>
 </div>
