--- a/lib/views/help/about.html.erb
+++ b/lib/views/help/about.html.erb
@@ -2,6 +2,7 @@
 
 <%= render :partial => 'sidebar' %>
 
+<div id="left_column_flip">
 <h1 id="introduction">Introduction to Reklamacije.net <a href="#introduction">#</a> </h1>
 <dl>
 
@@ -91,6 +92,6 @@ If you like what we're doing, then you can
 
 <p><strong>Next</strong>, read about <a href="<%= help_requesting_path %>">making requests</a> --&gt;
 
-<div id="hash_link_padding"></div>
+	<div id="hash_link_padding"></div>
 
-
+</div>
