--- a/lib/views/help/credits.html.erb
+++ b/lib/views/help/credits.html.erb
@@ -1,4 +1,4 @@
-<% @title = "Credit where credit is due" %>
+<% @title = "Zahvale" %>
 
 <%= render :partial => 'sidebar' %>
 <div id="left_column_flip">
@@ -7,81 +7,33 @@
 
 <dl>
 
-<dt id="thanks">Which people made <%= site_name %>? <a href="#thanks">#</a> </dt>
-<dd>Oh, nearly everyone (and <a href="http://www.mysociety.org/helpus">maybe you too</a>)! 
+<dt id="thanks">Ljudi koji su omogućili <%= site_name %>? <a href="#thanks">#</a> </dt>
+<dd>Eh, skoro svi (a možda i ti)! 
 <ul>
 <li>
-    <a href="http://www.yrtk.org">Heather Brooke</a> 
-    (<a href="http://www.guardian.co.uk/politics/2008/mar/29/houseofcommons.michaelmartin?gusrc=rss&amp;feed=worldnews">vampy!</a>) has
-    been pushing the idea of a UK FOI archive for years now.
+    <a href="http://twitter.com/darvvon">Mirolav Schlossberg</a>, <a href="http://open.hr">HrOpen</a> ekspertna skupina <a href="http://codeforcroatia.org">Programiraj za Hrvatsku</a>, što je iniciarao, kordinirao i u konačnici implementirao upgradeanu aplikaciju za ponošenje prigovora.
 </li>
 <li>
-    Both Phil Rodgers and <a href="http://www.flourish.org/blog/">Francis Irving</a>
-    entered it in a mySociety competition for ideas for public interest websites to build.
+    Marin i Ivan Balabanić, osnivači udruge No-Me-Kultura za odličnu ideju i osnivanje portala Reklamacije.net.
 </li>
 <li>
-    <a href="http://www.mysociety.org/2006/09/27/the-mysociety-call-for-proposals-the-winner-and-runners-up/">It won</a>, 
-    and then Chris Lightfoot (<a href="http://mk.ucant.org/archives/000129.html">RIP :(</a>) 
-    thought up the wheeze of intercepting email responses to requests and
-    automatically publishing them.  
+    Zahvaljujemo se i svim volonterima koji su sudjelovali u projektu potrošačkog portala Reklamacije.net i portala Podnesi.Rekalamacije.net.  
 </li>
 <li>
-    Tom Steinberg got the cash to pay for the site from
-    <a href="http://www.jrrt.org.uk/">a dead chocolate mogul</a> (<em>thank you!</em>) ...
-</li>
-<li>
-    ... so that Francis Irving, Angie Ahl, Tommy Martin, Louise Crow, Matthew Somerville
-    and Tom Steinberg could do the complex mixture of design and coding to build
-    what you see today. 
-</li>
-<li> 
-    Thanks particularly to Julian Todd (<a href="http://www.freesteel.co.uk/wpblog/">great blog!</a>), 
-    Francis Davey, and Etienne Pollard for using the site early on and giving
-    feedback (and/or legal advice!), and also to all our other users and
-    testers.  
-</li>
-<li>
-    The amazing team of volunteers who run the site, answer your support
-    emails, maintain the database of public authorities and 
-    <a href="http://www.mysociety.org/2009/10/13/behind-whatdotheyknow/">so much more</a>.
-    Thanks to John Cross, Ben Harris, Adam McGreggor, Alex Skene,
-    Richard Taylor.
-</li>
-<li>
-    Volunteers who have provided patches to the code - thanks Peter Collingbourne
-    and Tony Bowden. 
-</li>
-<li>
-    Everyone who has helped look up FOI email addresses.
-</li>
-<li>
-    We couldn't do any of this without those
-    <a href="http://www.ukcod.org.uk/UKCOD_Trustees">crazy people</a> who volunteer,
-    amongst many other things, to do the accounts and fill in our VAT return.
-</li>
-<li>
-    Finally, all the officers and servants who have answered the many requests
-    made through the site. Their diligence, patience and professionalism is
-    what has actually made the information that you see here. Thank them for
-    helping make Government more transparent.
+    Naposljetku, svim trgovcima i službenicima koji odgovaraju na brojne prigovore napravljene putem stranice. Njihova marljivost, strpljenje i profesionalnost jest ono što zapravo sačinjava zadovoljstvo građana i njihovih korisnika koje vidite ovdje.
 </li>
 </ul>
-You're all stars.
+Svi ste naše zvjezde.
 </dd>
 
-<dt id="helpus">Can I help out? <a href="#helpus">#</a> </dt>
+<dt id="helpus">Mogu li i ja pomoći? <a href="#helpus">#</a> </dt>
 <dd>
-    <p>Yes please! We're built out of our supporters and volunteers.</p>
+    <p>Svakko! Team čine volonteri i podržavatelji.</p>
     <ul>
-    <li>You can <a href="https://secure.mysociety.org/donate/">make a donation</a>. We're a registered charity.</li>
-    <li>Help people find successful requests, and monitor performance of authorities, by 
-    <a href="/categorise/play">playing the categorisation game</a>. </li>
-    <li>Find out FOI email addresses of <a href="/help/requesting#missing_body">authorities that we're missing</a>.</li>
-    <li>Write a blog post about either <%= site_name %> or an interesting request that you've
-    found. Post about it on a forum that you frequent. Tell friends about it.</li> <li>If you're
-    a programmer, get the source code for our parent project, <a href="http://alaveteli.org">Alaveteli</a>
-    and tell us about patches we can pull. It's made in Ruby on Rails.
-    <li>Read more about <a href="http://www.mysociety.org/helpus/">volunteering with mySociety</a>.
+    <li>Pomozi ljudima u pronalasku uspješno rješenih prigovora, i prati rad pravnih osoba.</li>
+    <li>Potraži pravne osobe koje nam nedostaju i <a href="/help/requesting#missing_body">pošalji informacije o novim pravnim osobama</a>.</li>
+    <li>Napiši blog o portalu <%= site_name %> ili nekom zanimljivom prigovoru kojeg su podnjeli korisnici portala. Reci prijateljima kako jednostavno mogu podnijeti svoje prigovore.
+    <li>Zaigraj <a href="/categorise/play">igru kategorizacije</a> i postavi pravilan status na prigovorima.</li>
     </ul>
 </dd>
 
