--- a/lib/views/help/help_out.html.erb
+++ b/lib/views/help/help_out.html.erb
@@ -1,9 +1,9 @@
-<% @title = "Help out" %>
+<% @title = "Pomozite nam" %>
 
 <%= render :partial => 'sidebar' %>
 <div id="left_column_flip">
- <h1>Help us!</h1>
+ <h1><%= @title%>!</h1>
 
- <p>This is a custom "help out" page, showing how you can add new pages to Alaveteli from within a theme.</p>
+ <p>Ukoliko želite pomoći projektu <a href="/help/contact">javite se timu</a> Reklamacije.net portala. Uvijek smo u potrazi za savjetnicima, udrugama koje žele suradnju, blogerima i novinarima koji žele pisati o kvaliteti proizvoda, usluga i pravima potrošača.</p>
 </div>
 
