--- a/lib/views/help/requesting.html.erb
+++ b/lib/views/help/requesting.html.erb
@@ -1,4 +1,4 @@
-<% @title = "Podnosenje prigovora" %>
+<% @title = "Podnošenje prigovora" %>
 
 <%= render :partial => 'sidebar' %>
 <div id="left_column_flip">
@@ -102,7 +102,7 @@ Ako je odgovor Povjerenstva za reklamacije nepovoljan za vas ili ga ne zaprimite
 <p>Ne. Komunikacija na portalu je javna i svi korisnici koji koriste portal prihvaćaju je kao takvu. Svrha portala je i informiranje građana a to ostvaruje kroz posredovanu javnu komunikaciju između pravnih osoba i građana.</p> 
 </dd>
 
-<dt id="moderation">Kako se administrira i moderira sadražaj na portalu? <a href="#moderation">#</a> </dt>
+<dt id="moderation">Kako se administrira i moderira sadržaj na portalu? <a href="#moderation">#</a> </dt>
 
 <dd> 
 <p>Svi sadržaji neprimjereni javnoj komunikaciji biti će uklonjeni s portala. Sadržaji koji nisu sukladni Zakonu o elektroničkim medijima također će biti uklonjeni s portala. Moderatori će uklanjati i sadržaje koje će smatrati off topic raspravama, nepotrebnim političkim diskusijama ili reklamiranjem određenih proizvoda ili usluga.</p>
