update Croatian help pages

--- a/lib/views/help/api.html.erb
+++ b/lib/views/help/api.html.erb
@@ -1,82 +1,78 @@
-<% @title = "Application Programming Interface - API" %>
+<% @title = "Aplikacijsko programsko sučelje - API" %>
 
 <%= render :partial => 'sidebar' %>
 
 <div id="left_column_flip">
 <h1><%=@title %></h1>
 
-<h2> Introduction </h2>
+<h2> Uvod </h2>
 
-<p>This page explains how programmers can make other websites and software
-interact with <%= site_name %> via an "API".
+<p>Ova stranica objašnjava kako programeri mogu napraviti interakciju internetskih stranica i programa s <i><%= site_name %></i> putem API-ja.
 </p>
 
-<p><%= site_name %> does not have a full API yet, but we are gradually adding
-lots of things that are similar in use to an API as they are requested.
+<p><i><%= site_name %></i> još nema potpuni API, ali postepeno dodajemo mnoge stvari, nakon što ih vi zatražite.
 </p>
 
 <hr>
 
-<h2> 1. Linking to new requests </h2>
+<h2> 1. Kreiranje novog prigovora </h2>
 
-<p>To encourage your users to make requests to a particular public authority, use URLs of the form:
-<%= link_to new_request_to_body_url(:url_name => "liverpool_city_council") , new_request_to_body_url(:url_name => "liverpool_city_council") %>.
-These are the parameters you can add to those URLs, either in the URL or from a form.
+<p>Za poticanje korisnika na pisanje novih prigovora određenim pravnim osobama, koristite URL-ove u ovom obliku:
+<%= link_to new_request_to_body_url(:url_name => "grad_zagreb") , new_request_to_body_url(:url_name => "grad_zagreb") %>.
+Ovo su parametri koje možete dodati tim URL-ovima, bilo u URL-u ili iz oblika:
 
 <ul>
-    <li> <strong>title</strong> - default summary of the new request.</li>
-    <li> <strong>default_letter</strong> - default text of the body of the letter. The salutation (Dear...) and signoff (Yours...) are wrapped round this. </li>
-    <li> <strong>body</strong> - as an alternative to default_letter, this sets the default entire text of the request, so you can customise the salutation and signoff. </li>
-    <li> <strong>tags</strong> - space separated list of tags, so you can find and link up any requests made later, e.g. <em>openlylocal spending_id:12345</em>. The : indicates it is a machine tag. The values of machine tags may also include colons, useful for URIs.
+    <li> <strong>title</strong> (naslov) - zadani sažetak novog prigovora</li>
+    <li> <strong>default_letter</strong> (zadano pismo) - zadani tekst u pismu. Pozdravni tekst (Poštovani...) i potpis (Lijep pozdrav...) su postavljeni oko ovog teksta</li>
+    <li> <strong>body</strong> (pravna osoba) - kao alternativa default_letter, ovo postavlja cjelokupni tekst prigovora, tako da možete prilagoditi pozdravni tekst i potpis</li>
+    <li> <strong>tags</strong> (oznake) - razmakom odvojen popis oznaka, tako da ga lakše možete pronaći i povezati kasnije napravljene zahtjeve, npr. prigovor potrošački_broj:12345. Dvotočka predstavlja računalnu oznaku. Vrijednosti računalne oznake mogu uključivati dvotočke, korisne za URL-ove., e.g. <em>prigovor trgovina_lokacija:12345</em>; Dvotočka predstavlja računalnu oznaku; vrijednosti računalne oznake mogu uključivati dvotočke, te korisne URI</li>
 </ul>
 
 <hr>
 
-<h2> 2. RSS (actually, Atom) feeds </h2>
+<h2> 2. RSS (zapravo Atom) </h2>
 
-<p>There are Atom feeds on most pages which list FOI requests, which you can
-use to get updates and links in XML format. Find the URL of the Atom feed in
-one of these ways: 
+<p>Postoje Atom izvori na većini stranica koje popisuju prigovore, koje možete koristiti kako biste dobili novosti i poveznice u XML formatu. Pronađite URL od Atom izvora na jedan od sljedećih načina:
 <ul>
-    <li>Look for the <img src="/images/feed-16.png" alt=""> RSS feed links.</li>
-    <li>Examine the <tt>&lt;link rel="alternate" type="application/atom+xml"&gt;</tt> tag in the head of the HTML. </li>
-    <li>Add <tt>/feed</tt> to the start of another URL.
+    <li>Pronađite <%= image_tag "feed-16.png", :alt => "" %> RSS link.</li>
+    <li>Potražite <tt>&lt;link rel="alternate" type="application/atom+xml"&gt;</tt> oznaku u sadržaju HTML-a.</li>
+    <li>Dodajte <tt>/feed</tt> na početak novog URL-a.
 </ul>
 
-<p>In particular, even complicated search queries have Atom feeds.
-You can do all sorts of things with them, such as query by authority, by file
-type, by date range, or by status. See the <a href="/search">advanced search
-tips</a> for details.
+<p>Preciznije rečeno, čak i kompliciraniji upiti za pretraživanje sadrže Atom izvore. S njima možete raditi mnoge stvari, kao što je pretraživanje prema vrsti pravne osobe, prema vrsti datoteke, prema rasponu podataka ili prema statusu. Pogledajte <a href="/advancedsearch">savjete za napredno pretraživanje</a> za detalje.
 
 <hr>
 
-<h2> 3. JSON structured data </h2>
+<h2> 3. JSON strukturirani podaci </h2>
 
-<p>Quite a few pages have JSON versions, which let you download information about
-objects in a structured form. Find them by:
+<p>Dosta internetskih stranica ima JSON verzije, koje omogućavaju preuzimanje podataka o objektima u strukturiranom obliku. Pronađite ih pomoću:
 <ul>
-    <li>Adding <tt>.json</tt> to the end of the URL. </li>
-    <li>Look for the <tt>&lt;link rel="alternate" type="application/json"&gt;</tt> tag in the head of the HTML. </li>
+    <li>Dodajući <tt>.json</tt> na kraj URL-a.</li>
+    <li>Potražite <tt>&lt;link rel="alternate" type="application/json"&gt;</tt> oznaku u sadržaju HTML-a.</li>
 </ul>
 </p>
 
-<p>Requests, users and authorities all have JSON versions containing basic
-information about them. Every Atom feed has a JSON equivalent, containing
-information about the list of events in the feed.
+<p>Prigovori, korisnici i pravne osobe - svi su JSON verzije koje sadrže osnovne informacije o njima. Svaki Atom izvor ima svoj JSON ekvivalent, koji sadrži informacije s popisom događanja unutar izvora.
 </p>
 
 <hr>
-<h2> 4. Spreadsheet of all authorities </h2>
+<h2> 4. Popis pravnih osoba </h2>
 
 <p>
-A spreadsheet file listing every body in <%= site_name %> is available:
+Datoteka s popisom sadrži nazive svih pravnih osoba na <i><%= site_name %></i> te je dostupan na poveznici:
 <%= link_to "all-authorities.csv", all_public_bodies_csv_url() %>
 </p>
 
+<p>Zaglavlje popisa pravnih osoba sadrži nazive informacija dostupnih u datoteci:<br>
+<i>Name, Short name, URL name, Tags, Home page, Publication scheme, Disclosure log, Notes, Created at, Updated at, Version</i></p>
+
+	<p class="form_note">
+    Glavni izvor informacija za popis pravnih osoba je NKD nacionalna klasifikacija pravnih osoba, skup podataka koji piše i održava Državni zavod za statistiku. Osim tog popisa koristimo i <a href="http://data.gov.hr/dataset/azurirani-popis-tijela-javne-vlasti">popis tijela javne vlasti</a> koje održava <strong>Povjerenik za informiranje</strong> a ove skupove podataka možete pronaći na portalu otvorenih podataka <a href="http://data.gov.hr">data.gov.hr</a>.
+    </p>
+
 <hr>
 
-<p>Please <a href="/help/contact">contact us</a> if you need an API feature that isn't there yet. It's
-very much a work in progress, and we do add things when people ask us to.</p>
+<p>Molimo, <a href="/help/contact">kontaktirajte nas</a> ukoliko vam je potreban API dodatak kojeg trenutno nema. Ovo je zaista posao u tijeku i mi dodajmo stvari kad nas to ljudi <strong>zatraže</strong>.</p>
 
 <div id="hash_link_padding"></div>
 
