--- a/lib/views/help/credits.html.erb
+++ b/lib/views/help/credits.html.erb
@@ -7,11 +7,11 @@
 
 <dl>
 
-<dt id="thanks">Ljudi koji su omogućili <%= site_name %>? <a href="#thanks">#</a> </dt>
+<dt id="thanks">Ljudi koji su omogućili <%= site_name %> <a href="#thanks">#</a> </dt>
 <dd>Eh, skoro svi (a možda i ti)! 
 <ul>
 <li>
-    <a href="http://twitter.com/darvvon">Mirolav Schlossberg</a>, <a href="http://open.hr">HrOpen</a> ekspertna skupina <a href="http://codeforcroatia.org">Programiraj za Hrvatsku</a>, što je iniciarao, kordinirao i u konačnici implementirao upgradeanu aplikaciju za ponošenje prigovora.
+    <a href="http://twitter.com/darvvon">Mirolav Schlossberg</a>, voditelj <a href="http://open.hr">HrOpen</a> ekspertne skupine <a href="http://codeforcroatia.org">Programiraj za Hrvatsku</a>, za iniciranje, koordiniranje i u konačnici implementaciju aplikacije za ponošenje elektronskih prigovora.
 </li>
 <li>
     Marin i Ivan Balabanić, osnivači udruge No-Me-Kultura za odličnu ideju i osnivanje portala Reklamacije.net.
@@ -28,7 +28,7 @@ Svi ste naše zvjezde.
 
 <dt id="helpus">Mogu li i ja pomoći? <a href="#helpus">#</a> </dt>
 <dd>
-    <p>Svakko! Team čine volonteri i podržavatelji.</p>
+    <p>Svakako! Mi smo volonteri i podržavatelji:</p>
     <ul>
     <li>Pomozi ljudima u pronalasku uspješno rješenih prigovora, i prati rad pravnih osoba.</li>
     <li>Potraži pravne osobe koje nam nedostaju i <a href="/help/requesting#missing_body">pošalji informacije o novim pravnim osobama</a>.</li>
