update Croatian help

--- a/lib/views/help/api.html.erb
+++ b/lib/views/help/api.html.erb
@@ -67,7 +67,7 @@ Datoteka s popisom sadrži nazive svih pravnih osoba na <i><%= site_name %></i> 
 <i>Name, Short name, URL name, Tags, Home page, Publication scheme, Disclosure log, Notes, Created at, Updated at, Version</i></p>
 
 	<p class="form_note">
-    Glavni izvor informacija za popis pravnih osoba je NKD nacionalna klasifikacija pravnih osoba, skup podataka koji piše i održava Državni zavod za statistiku. Osim tog popisa koristimo i <a href="http://data.gov.hr/dataset/azurirani-popis-tijela-javne-vlasti">popis tijela javne vlasti</a> koje održava <strong>Povjerenik za informiranje</strong> a ove skupove podataka možete pronaći na portalu otvorenih podataka <a href="http://data.gov.hr">data.gov.hr</a>.
+    Glavni izvor informacija za popis pravnih osoba je NKD nacionalna klasifikacija pravnih osoba, skup podataka koji piše i održava <strong>Državni zavod za statistiku</strong>. Osim tog popisa koristimo i <a href="http://data.gov.hr/dataset/azurirani-popis-tijela-javne-vlasti">popis tijela javne vlasti</a> koje održava <strong>Povjerenik za informiranje</strong> a ove skupove podataka možete pronaći na portalu otvorenih podataka <a href="http://data.gov.hr">data.gov.hr</a>.
     </p>
 
 <hr>
