--- a/lib/views/help/unhappy.html.erb
+++ b/lib/views/help/unhappy.html.erb
@@ -36,7 +36,7 @@ U tom slučaju treba poduzeti sljedeće:
 
 <ol>
 <% if !@info_request.nil? %>
-    <li><%= link_to "Pošaljite drugostupanjsku žalbu", show_response_no_followup_path(:id => @info_request.id, :incoming_message_id => nil) + "?internal_review=1#followup", :class => 'link_button_green' %>.</li>
+    <li><%= link_to "Pošaljite drugostupanjsku žalbu", show_response_no_followup_path(:id => @info_request.id, :incoming_message_id => nil) + "?internal_review=1#followup", :class => 'link_button_green' %></li>
 <% else %>
     <li>Ispod prigovora na stranici <i><%= site_name %></i>, pronađite i kliknite na poveznicu "napišite drugostupanjsku žalbu".</li>
 <% end %>
