--- a/lib/views/help/contact.html.erb
+++ b/lib/views/help/contact.html.erb
@@ -2,7 +2,7 @@
 
 <%= foi_error_messages_for :contact %>
 
-<div id="left_column_flip">
+<div id="contact_preamble">
 
     <% if !flash[:notice] %>
 
