--- a/lib/views/help/privacy.html.erb
+++ b/lib/views/help/privacy.html.erb
@@ -9,8 +9,8 @@
 
 <dt id="email_address">Tko može vidjeti moju e-mail adresu? <a href="#email_address">#</a> </dt>
 
-<dd><p>Nećemo otkriti vašu e-mail adresu nikome, osim ako nas na to obvezuje zakon ili ako nas vi to zatražite. Navedeno se odnosi i na tijelo javne vlasti kojemu upućujete prigovor. Oni mogu samo vidjeti adresu oblika @<%= AlaveteliConfiguration::incoming_email_domain %> koja je jedinstvena za taj prigovor.</p>
-<p>Ako pošaljete poruku drugom registriranom korisniku na stranici, tada će im se prikazati vaša osobna e-mail adresa. Bit ćete upozoreni o tome prilikom slanja poruke.</p>
+<dd><p>Nećemo otkriti vašu e-mail adresu nikome, osim ako nas na to obvezuje zakon ili ako nas vi to zatražite. Navedeno se odnosi i na pravnu osobu kojoj upućujete prigovor. Oni mogu samo vidjeti adresu oblika @<%= AlaveteliConfiguration::incoming_email_domain %> koja je jedinstvena za taj prigovor.</p>
+<p>Ako pošaljete poruku drugom registriranom korisniku na stranici, tada će im se prikazati vaša e-mail adresa kojom ste registrirani na portal. Bit ćete upozoreni o tome prilikom slanja privatne poruke.</p>
 </dd>
 
 <dt id="nasty_spam">Hoćete li mi slati neugodne i neprimjerene spamove? <a href="#nasty_spam">#</a> </dt>
