--- a/lib/views/help/unhappy.html.erb
+++ b/lib/views/help/unhappy.html.erb
@@ -38,24 +38,25 @@ U tom slučaju treba poduzeti sljedeće:
 <% if !@info_request.nil? %>
     <li><%= link_to "Pošaljite drugostupanjsku žalbu", show_response_no_followup_path(:id => @info_request.id, :incoming_message_id => nil) + "?internal_review=1#followup", :class => 'link_button_green' %></li>
 <% else %>
-    <li>Ispod prigovora na stranici <i><%= site_name %></i>, pronađite i kliknite na poveznicu "napišite drugostupanjsku žalbu".</li>
+    <li>Ispod prigovora na stranici <i><%= site_name %></i>, pronađite i kliknite na poveznicu <strong>napišite drugostupanjsku žalbu</strong>.</li>
 <% end %>
-<li>Prigovoru priložiti svu potrebnu dokumentaciju (sadržaj prvog prigovora, datum slanja prvog prigovora, odgovor koji ste primili je bilo odgovora, nove dokaze i sl.), te prigovor nasloviti na Povjerenstvo za reklamacije kod te pravne osobe.</li>
+<li>Žalbi treba priložiti svu potrebnu dokumentaciju (sadržaj prvog prigovora, datum slanja prvog prigovora, odgovor koji ste primili, nove dokaze i sl.), te žalbu nasloviti na ruke Povjerenstva za reklamacije kod te pravne osobe.</li>
 
-<li>Tražite rješavanje vašeg prigovora čim je prije moguće. Bilo bi dobro uključiti i poveznicu na stranicu prigovora kako bi bilo jasno o kojem se točno prigovoru radi.</li>
+<li>Tražite rješavanje vašeg prigovora čim je prije moguće. Bilo bi dobro uključiti i poveznicu na stranicu prigovora na ovom portalu kako bi bilo jasno o kojem se točno prigovoru radi te da je komunikacija javna.</li>
 
 <li>U roku od 30 dana Povjerenstvo treba razmotriti prigovor, te uputiti odgovor potrošaču.</li>
 </ol>
 
 <h1 id="complaining">2. Nastavljanje postupka kod Ministarstva gospodarstva <a class="hover_a" href="#complaining">#</a> </h1>
 
-<p>Ako ste još uvijek nezadovoljni i nakon što je pravna osoba dostavila odgovor možete se žaliti nadležnom ministarstvu. Kako bi to učinili, 
+<p>Ako ste još uvijek nezadovoljni i nakon što je pravna osoba dostavila odgovor možete se žaliti nadležnom ministarstvu. Čak i kada pravna osoba ne odgovori na vašu žaljbu koju ste naslovili na Povjerenstvo, možete se žaliti nadležnom ministarstvu. Kako bi to učinili, 
 <a href="https://www.gov.hr/moja-uprava/pravna-drzava-i-sigurnost/prava-potrosaca/prije-i-nakon-kupnje/reklamacija-proizvoda-i-usluga-s-nedostatkom/183">prvo pročitajte upute za traženje inspekcijskog nadzora</a> na središnjem državnom portalu.
 </p>
 
-<p>Tek nakon što ste dobili negativan odgovor trgovca na Vaš pisani prigovor ili pitanja u vezi svojih prava, putem web aplikacije <a href="https://prijava.mingo.hr/CD/prijava.jsp">Centralni informacijski sustav za zaštitu potrošača</a> možete uputiti zahtjev za inspekcijski nadzor.
+<p>Tek nakon što ste dobili negativan odgovor trgovca na Vaš pisani prigovor, pitanja u vezi svojih prava ili Vašu žalbu upućenu Povjerenstvu za reklamacije kod pravne osobe, putem službene MINGO web aplikacije <a href="https://prijava.mingo.hr/CD/prijava.jsp">Centralni informacijski sustav za zaštitu potrošača</a> možete uputiti zahtjev za inspekcijski nadzor:
 
-<p>Kako biste olakšali slanje relevantne informacije inspektorima, priložite uz Vaš prigovor i
+<ol>
+<li>Kako biste olakšali slanje relevantne informacije inspektorima, priložite i
 <% if !@info_request.nil? %>
     poveznicu na Vaš prigovor
     <strong><%=h request_url(@info_request) %></strong>
@@ -63,16 +64,16 @@ U tom slučaju treba poduzeti sljedeće:
     poveznicu na Vaš prigovor na stranici <i><%= site_name %></i>
 <% end %>
 ili ispišite cijelu stranicu s prigovorom i sve priloge.
-</p>
+</li>
 
-<p>Nakon ispunjavanja i slanja jednostavnog obrasca, sustav će vaš predmet automatski proslijediti Ministarstvu gospodarstva, Savjetovalištu za zaštitu potrošača ili Tržišnoj inspekciji Ministarstva gospodarstva, a vama poslati PIN uz pomoć kojega možete pratiti stanje podnesenog predmeta.</p>
+<li>Nakon ispunjavanja i slanja obrasca putem službene web aplikacije, <a href="https://prijava.mingo.hr/CD/prijava.jsp">Centralni informacijski sustav za zaštitu potrošača</a> će vaš predmet automatski proslijediti Ministarstvu gospodarstva, Savjetovalištu za zaštitu potrošača ili Tržišnoj inspekciji Ministarstva gospodarstva, a vama poslati PIN uz pomoć kojega možete pratiti stanje podnesenog predmeta.</li>
+</ol>
 
-<p><i><%= site_name %></i> nema posebnih sredstava za rukovanje s prigovorima u ovoj fazi — prigovori se nalaze u sustavu nadležnog ministarstva. Međutim, možete ostavljati komentare ispod Vašeg prigovora kako bi informirali ostale o napretku procesa.</p>
+<p><i><%= site_name %></i> nema posebnih sredstava za rukovanje s prigovorima u ovoj fazi — prigovori se nalaze u sustavu nadležnog ministarstva. Međutim, možete ostavljati komentare ispod Vašeg prigovora na <i><%= site_name %></i> o statusu rješavanja zahtjeva za inspekcijskim nadzorom kako bi informirali ostale o napretku procesa.</p>
 
 <h1 id="other_means">3. Savjetovanje putem portala Reklamacije.net <a class="hover_a" href="#other_means">#</a> </h1>
 
 <p>Potragu za rješenjem Vašeg problema možete nastaviti i na druge načine.</p>
 
-<p>
-Ako ste još uvijek nezadovoljni odgovorom ili uopće niste dobili odogovor portal Reklamacije.net će se potruditi ponuditi Vam besplatne savjete za Vaš slučaj. Na središtenjem portalu <a class="hover_a" href="http://reklamacije.net">Reklamacije.net</a> potražite rubriku <strong>Savjeti</strong> i kontaktirajete naše osoblje. Moguće je da zbog ograničenih resursa savjetnici neće biti na raspolaganju ali svakako savjetujemo ovaj korak prije daljnih akcija koje planirate poduzeti. 
+<p>Ako ste još uvijek nezadovoljni odgovorom ili uopće niste dobili odogovor, portal Reklamacije.net će se potruditi ponuditi Vam besplatne savjete za Vaš slučaj. Na središtenjem portalu <a class="hover_a" href="http://reklamacije.net">Reklamacije.net</a> potražite rubriku <strong>Savjeti</strong> i kontaktirajete naše osoblje. Moguće je da zbog ograničenih resursa savjetnici neće biti na raspolaganju ali svakako savjetujemo ovaj korak prije daljnih akcija koje planirate poduzeti. 
 </p>
