--- a/lib/views/help/alaveteli.html.erb
+++ b/lib/views/help/alaveteli.html.erb
@@ -8,8 +8,8 @@
     <h1>Powered by Alaveteli</h1>
   <% end %>
   <p>This website is powered by Alaveteli.  Alaveteli is free software
-    for making Freedom of Information requests.  It can easily be
-    translated into any language, and customised for variations of FOI
+    originally made for making Freedom of Information requests.  It can easily 
+    be translated into any language, and customised for variations of FOI
     law.</p>
 
   <p>The development of Alaveteli is sponsored and supported by a
