--- a/lib/views/help/_sidebar.html.erb
+++ b/lib/views/help/_sidebar.html.erb
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
-<div id="right_column_flip">
+<div id="right_column_flip" class="right_column_flip">
     <h2>Stranice za pomoć</h2>
     <ul class="no_bullets">
         <li><%= link_to_unless_current "Uvod", help_about_path %></li>
@@ -13,28 +12,7 @@
         <li><%= link_to_unless_current "Napredna pretraga", advanced_search_path %></li>
     </ul>
 
-    <h2 id="contact">Kontaktirajte nas</h2>
+    <h2 id="contact" class="contact">Kontaktirajte nas</h2>
     <p>Ako niste pronašli odgovor na vaše pitanje ili nas želite kontaktirati vezano uz portal, <a href="<%= help_contact_path %>">pišite&nbsp;nam</a>.
     </p>
-</div>
-
-=======
-<div id="right_column_flip" class="right_column_flip">
-<h2>Help pages</h2>
-<ul class="no_bullets">
-  <li><%= link_to_unless_current "Introduction", help_about_path %></li>
-  <li><%= link_to_unless_current "Making requests", help_requesting_path %></li>
-  <li><%= link_to_unless_current "Your privacy", help_privacy_path %></li>
-  <li><%= link_to_unless_current "FOI officers", help_officers_path %></li>
-  <li><%= link_to_unless_current "About the software", help_alaveteli_path %></li>
-  <li><%= link_to_unless_current "Credits", help_credits_path %></li>
-  <li><%= link_to_unless_current "Programmers API", help_api_path %></li>
-  <li><%= link_to_unless_current "Advanced search", advanced_search_path %></li>
-</ul>
->>>>>>> mysociety/master
-
-<h2 id="contact" class="contact">Contact us</h2>
-<p>If your question isn't answered here, or you just wanted to let us know
-  something about the site, <a href="<%= help_contact_path %>">contact&nbsp;us</a>.
-</p>
 </div>
