--- a/lib/views/help/credits.html.erb
+++ b/lib/views/help/credits.html.erb
@@ -36,10 +36,10 @@ Svi ste naše zvjezde.
     <li>Napiši blog o portalu <%= site_name %> ili nekom zanimljivom prigovoru kojeg su podnjeli korisnici portala. Reci prijateljima kako jednostavno mogu podnijeti svoje prigovore.
     <li>Zaigraj <a href="/categorise/play">igru kategorizacije</a> i postavi pravilan status na prigovorima.</li>
     </ul>
-=======
-<dt id="development">Development <a href="#development">#</a></dt>
+
+<dt id="development">Razvoj <a href="#development">#</a></dt>
 <dd>
- Hearty cheers to <a href="http://alaveteli.org/">Alaveteli</a>&rsquo;s many <a href="https://github.com/mysociety/alaveteli/graphs/contributors">contributors</a>.</p>
+ Srčani pozdrav mnogim <a href="http://alaveteli.org/">Alaveteli</a> <a href="https://github.com/mysociety/alaveteli/graphs/contributors">suradnicima</a>.</p>
 </dd>
 
 <dt id="helpus">Mogu li i ja pomoći? <a href="#helpus">#</a> </dt>
@@ -57,7 +57,7 @@ Svi ste naše zvjezde.
   </dd>
   <dt id="classification">Razvrstaj prigovore <a href="#classification">#</a></dt>
   <dd>
-    <p>Moderacija može biti zabavna! Pomozi ljudima da pronađu neki prigovor, ili da provjere kvalitetu neke usluge ili robe  tako da<a href="<%= categorise_play_path %>">odigraš igru kategorizacije</a>.</p>
+    <p>Moderacija može biti zabavna! Pomozi ljudima da pronađu neki prigovor, ili da provjere kvalitetu neke usluge ili robe  tako da <a href="<%= categorise_play_path %>">odigraš igru kategorizacije</a>.</p>
 
     <p>Ili budi sunce i pronađi email adrese pravnih osoba za koje još <a href="<%= help_requesting_path(:anchor => 'missing_bodies') %>">nemamo kontakt</a>.</p>
   </dd>
