--- a/lib/views/general/_responsive_header.html.erb
+++ b/lib/views/general/_responsive_header.html.erb
@@ -1,11 +1,13 @@
 <% if AlaveteliConfiguration::responsive_styling || params[:responsive] %>
-<div class="ms-header">
-  <div class="ms-header__container">
-    <div class="ms-header__logo">
-      <a href="http://codeforcroatia.org">Code for Croatia</a>
+  <% unless @user and @user.is_pro? %>
+    <div class="ms-header">
+      <div class="ms-header__container">
+        <div class="ms-header__logo">
+          <a href="http://codeforcroatia.org">Code for Croatia</a>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
+  <% end %>
 <% end %>
 <div class="only-show-for-print">
   <p class="print-information">Printed from <%= request.original_url %> on <%= Time.zone.now.to_formatted_s(:long)  %></p>
